# deep_learning_solar_flare_project

./: LICENSE  Makefile  README.md  pyproject.toml
deep_learning_solar_flare_project/: __init__.py  dataset.py  features.py  plots.py
deep_learning_solar_flare_project/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
