[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "deep_learning_solar_flare_project"
version = "0.0.1"
description = "Solar flare prediction using X-ray images"
authors = [
  { name = "Hayes Justin Landry" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.12,<4.0"


[tool.ruff]
line-length = 99
src = ["deep_learning_solar_flare_project"]
include = ["pyproject.toml", "deep_learning_solar_flare_project/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["deep_learning_solar_flare_project"]
force-sort-within-sections = true

